# SimpleVulkanEngine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Build.yml  cmake-multi-platform.yml
CMake/: FindGLFW3.cmake  Findnlohmann_json.cmake  Findstb.cmake  Findtinygltf.cmake  Findtinyobjloader.cmake
assets/models/: viking_room.glb  viking_room.gltf
assets/shaders/: Compile.bat  Shader.slang
src/: main.cpp
